2009-09-07  Rudy Neeser  <rudy.neeser@gmail.com>

	* operations.lisp: Added type information when signalling
	conditions of type OPERATION-NOT-SUPPORTED to give more
	information to callers of c+, c-, c* and c/

	* conditions.lisp (operation-not-supported): Updated the condition
	to be able to supply extra information as to why the operation
	failed.

2009-09-02  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (negate): Added a method to return the additive
	inverse of a list.

	* operations.lisp: Added addition, subtraction, multiplication and
	division operations on lists, treating them as vectors. Also
	includes a mechanic to cast lists up to vectors when required.

	* operations.lisp (create-list-operation-method): Added a macro to
	define vector operations, such as addition and subtraction, on
	lists.

	* tests.lisp (test-dimensions): Added a test to test the
	dimensions of lists in various operations.

	* conditions.lisp (operation-not-supported): Fixed a bug that
	stopped this condition from being reported.

2009-05-20  Rudy Neeser  <rudy.neeser@gmail.com>

	* package.lisp (#:create-rotation-from-view-to-view): Exported the
	symbol.
	
	* rotations.lisp (create-rotation-from-view-to-view): Creates a
	rotation matrix that will rotate one vector on to another.

	* package.lisp (#:create-rotation-from-view): Exported
	CREATE-ROTATION-FROM-VIEW.

	* rotations.lisp (fill-row): A non-exported macro that allows for
	filling in rows of a matrix while constructing one.
	(create-rotation-from-view): A new function that creates rotation
	matrices given a view direction and a global up vector.

	* package.lisp (#:matrix-elt): Added MATRIX-ELT to the list of
	exported package symbols.

	* vector.lisp (print-object): Updated to print vectors using only
	3 places after the decimal point.

	* matrix.lisp (print-object): updated to print matrices using only
	3 places after the decimal point.

2009-04-20  Rudy Neeser  <rudy.neeser@gmail.com>
